--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.12",
     "method-override": "^2.3.10",
     "mongoose": "^5.1.1",
     "mongoose-paginate": "^5.0.3",
